[package]
name = "mwe_rocket_rumqtt"
version = "0.1.0"
authors = ["TheBestJohn <john@thebestjohn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rumqtt = {git = "https://github.com/TheBestJohn/rumqtt.git"}
