[package]
name = "mwe_rocket_rumqtt"
version = "0.1.0"
authors = ["TheBestJohn <john@thebestjohn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", rev = "4e6a7dd"}
rumqtt = {git = "https://github.com/leoniloris/rumqtt.git"}
mwe_rocket_rumqtt = { path = "." }
